# pidog_ros2

./: .gitignore  BRAX_DEPLOYMENT.md  BRAX_QUICKSTART.md  BUILD_TROUBLESHOOTING.md  CLAUDE.md  CORRECT_SENSOR_LAYOUT.md  DATA_COLLECTION_GUIDE.md  DEBUGGING_NO_MOVEMENT.md  DOCKER_SETUP.md  Dockerfile.rocm  Dockerfile.rocm-ros2  FAST_RL_TRAINING.md  GAZEBO_IMU_INVESTIGATION.md  GAZEBO_SETUP.md  GPU_TRAINING.md  GPU_TRAINING_SETUP.md  HARDWARE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  IMU_SENSOR_SOLUTION.md  INDEX.md  MJX_TRAINING_GUIDE.md  MODEL_VERIFICATION.md  MUJOCO_LOG.TXT  MUJOCO_MIGRATION.md  NEURAL_NETWORK_QUICKSTART.md  PHYSICS_QUALITY_GUIDE.md  PHYSICS_WARNINGS_README.md  PRODUCTION_PIPELINE.md  QUICKSTART_GPU.md  QUICKSTART_MUJOCO.md  QUICK_START.md  QUICK_START_RL_TRAINING.md  README.md  README_GPU_TRAINING.md  README_PRODUCTION.md  READY_TO_TRAIN.md  REBUILD_AFTER_UPDATE.md  REBUILD_GUIDE.md  REWARD_FUNCTION_DESIGN.md  REWARD_FUNCTION_UPDATED.md  (+75 more)
.claude/: settings.local.json
models/: best_model.pth  final_model.pth
pidog_control/: package.xml  (+1 more)
pidog_description/: package.xml  setup.py
pidog_description/config/: pidog_controllers.yaml
pidog_description/launch/: gazebo.launch.py  gazebo_manual.launch.py  gazebo_rl_fast.launch.py
pidog_description/mjcf/: pidog_simple.xml  pidog_with_meshes.xml
pidog_description/scripts/: standing_pose_publisher.py
pidog_description/urdf/: pidog.urdf
pidog_description/worlds/: empty.world  pidog.sdf  pidog.sdf.backup  pidog_rl_fast.sdf  pidog_rl_medium.sdf  pidog_test_no_sensors.sdf  pidog_with_imu_only.sdf
(+62 files in other folders)
